public/style.css
@import url('https://fonts.googleapis.com/css?family=Alegreya+Sans|Dosis|Source+Sans+Pro:600');

/* font-family: 'Dosis', sans-serif;
font-family: 'Source Sans Pro', sans-serif;
font-family: 'Alegreya Sans', sans-serif; */

/*red: #FF7B6A  */
/*orange: #FFAB6A  */
/*green: #66F48B  */
/*blue: #64EFE5  */

.material-icons {
  padding-bottom: 4px;
  vertical-align: middle;
  font-size: 2px;
}
h1, h3, h4 {
  line-height: 1;
  font-family: 'Source Sans Pro', sans-serif;
}
p {
  font-family: 'Source Sans Pro', sans-serif;
}
button {
  font-family: 'Alegreya Sans', sans-serif;
  font-size: 12px;
  border: none;
  -webkit-appearance: none;
  -moz-appearance:    none;
  appearance:         none;
}
button:active {
  box-shadow: none;
  border: none;
}
input {
  font-family: 'Alegreya Sans', sans-serif;
  font-size: 12px;
  border: none;
  -webkit-appearance: none;
  -moz-appearance:    none;
  appearance:         none;
}
.clickable:hover {
  cursor: pointer;
}
.dosis {
  font-family: 'Dosis', sans-serif;
}

.white {
  color: #FFFFFF;
}
.black {
  color: #000000;
}

.red {
  color: #FF7B6A;
}
.bgRed {
  background: #FF7B6A;
}
.bgRed:hover {
  border: 5px solid #FF5A45;
  padding: 0;
}
.bgLightRed {
  background: #FFA296;
}
.bgLightRed:hover {
  border: 5px solid #FF7B6A;
  padding: 0;
}
.bgLightRedNH {
  background: #FFA296;
}

.orange {
  color: #FFAB6A;
}
.bgOrange {
  background: #FFAB6A;
}
.bgOrange:hover {
  border: 5px solid #FF9645;
  padding: 0;
}
.bgLightOrange {
  background: #FFC396;
}
.bgLightOrangeNH {
  background: #FFC396;
}
.bgLightOrange:hover {
  border: 5px solid #FFAB6A;
  padding: 0;
}

.green {
  color: #66F48B;
}

.bgGreen {
  background: #66F48B;
}
.bgGreen:hover {
  border: 5px solid #1CE050;
  padding: 0;
}
.bgLightGreen {
  background: #92FAAD;
}
.bgLightGreen:hover {
  border: 5px solid #66F48B;
  padding: 0;
}
.bgLightGreenNH {
  background: #92FAAD;
}

.blue {
  color: #64EFE5;
}
.lightBlue {
  color: #91F7EF;
}
.bgBlue {
  background: #64EFE5;
}
.bgBlue:hover {
  border: 5px solid #3EE4DF;
  padding: 0;
}
.bgLightBlue {
  background: #91F7EF;
}
.bgLightBlueNH {
  background: #91F7EF;
}
.bgLightBlue:hover {
  border: 5px solid #64EFE5;
  padding: 0;
}

.purple {
  color: #BC6DF1;
}
.bgPurple {
  background: #BC6DF1;
}
.bgPurple:hover {
  border: 5px solid #8F26D7;
  padding: 0;
}
.bgLightPurple {
  background: #D198F8;
}
.bgLightPurple:hover {
  border: 5px solid #BC6DF1;
  padding: 0;
}
.bgLightPurpleNH {
  background: #D198F8;
}

.pink {
  color: #F667C1;
}
.bgPink {
  background: #F667C1;
}
.bgPink:hover {
  border: 5px solid #EF41AE;
  padding: 0;
}
.bgLightPink {
  background: #FA93D4;
}
.bgLightPink:hover {
  border: 5px solid #F667C1;
  padding: 0;
}
.bgLightPinkNH {
  background: #FA93D4;
}

.bigFont {
  font-size: 20px;
}
.header {
  padding: 0 3px 0 3px;
  margin: 0 auto;
  width: 98%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  text-align: center;
  position: fixed;
  top: 0;
  z-index: 5;
  background: rgba(255,255,255,.9);
}
.welcomeUser {
  width: 33%;
}
.loginSignup {
  width: 33%;
  display: inline-block;
}
.loginBtns:hover {
  cursor: pointer;
}
.logo {
  width: 33%;
  margin: 0 auto;
  text-align: center;
  font-family: 'Dosis', sans-serif;
  font-size: 30px;
  line-height: 1;
}
.mobileLogo {
  width: 33%;
  margin: 0 auto;
  text-align: center;
  font-family: 'Dosis', sans-serif;
  font-size: 40px;
  line-height: 1;
  display: none;
}
.intro {
  margin: 0 auto;
  margin-top: 100px;
  text-align: center;
  max-width: 600px;
}
.introBtn {
  margin: 0 auto;
  margin-top: 35px;
  text-align: center;
  margin-bottom: 20px;

}
.message {
  text-align: center;
  margin: 0 auto;
  margin-bottom: 2px;
}
.categoryCard {
  text-align: center;
  min-width: 200px;
  height: 200px;
  border-radius: 10px;
  cursor: pointer;
  padding: 1px;
  box-sizing: border-box;
  font-family: 'Dosis', sans-serif;
  margin-right: 5px;

}
.questionCard {
  text-align: center;
  width: 150px;
  height: 150px;
  border-radius: 7px 7px 0 0;
  cursor: pointer;
  padding: 4px;
  box-sizing: border-box;
  margin: 10px 5px 0px 5px;
}
.questionCard > h3 {
  font-size: 15px;
  margin: 5px 0 0 0;
}

.categoryFlex {
  margin: 0 auto;
  max-width: 700px;
  display: flex;
  flex-direction: row;
  border-top: 5px solid #999999;
  border-bottom: 5px solid #999999;
  padding: 10px 0 10px 0;
  overflow-x: scroll;
}

.questionFlex {
  margin: 0 auto;
  max-width: 800px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.viewAnswersModal {
  text-align: center;
  width: 100%;
  height: 210px;
  background: rgba(64, 237, 110, .9);
  position: fixed;
  z-index: 10;
  bottom: 0;
  color: #FFFFFF;
}
.ansScroll {
  max-height: 160px;
  overflow-y: scroll;
  border-bottom: 1px solid #FFFFFF;
}
.ansModelHeader {
  border-bottom: 1px solid #FFFFFF;
  margin: 0;
  background: rgba(64, 237, 110, .5);
  padding-top: 5px;
}
.ansModelHeader > h3 {
  display: inline-block;
  margin: 0 5px 0 0;
}
.answersModalSpacingBox {
  width: 100%;
  height: 200px;
}
.viewAnswersBtn {
  -webkit-appearance: none;
  border: none;
  border-radius: 10px;
  box-sizing: border-box;
  background-color: #40ED6E;
  display: inline;
  width: 85px;
  height: 18px;
}
.viewAnswersBtn:hover {
  border: 2px solid #92FAAD;
  cursor: pointer;
}
.answerButton {
  -webkit-appearance: none;
  box-sizing: border-box;
  border-radius: 9px;
  background-color: #FFFFFF;
  border: 1px solid #92FAAD;
  display: inline;
  width: 52px;
  height: 18px;
}
.answerButton:hover {
  border: 2px solid #40ED6E;
  cursor: pointer;
  width: 51px;
}

.buttonBox {
  display: flex;
  flex-direction: row;
  justify-content: center;
  text-align: center;
  box-sizing: border-box;
  margin: 0;
  width: 150px;
  height: 25px;
  margin: 0px 5px 5px 5px;
  border-radius: 0 0 7px 7px;
  padding: 3px 5px 0px 5px;
}
.ansFormModel {
  text-align: center;
  width: 100%;
  height: 100%;
  background: rgba(100, 100, 100, .8);
  position: fixed;
  z-index: 10;
  top: 0;
  padding-top: 25%;
}
.ansFormModel > p {
  color: #FFFFFF;
}
.submitAnsForm {
  height: 40px;
  margin: 0 auto;
  vertical-align: middle;
  text-align: center;
}
.textField {
  margin-top: 10px;
  border-radius: 9px;
  background-color: #FFFFFF;
  border: 1px solid #92FAAD;
}
.submitBtn {
  margin-top: 10px;
  border-radius: 9px;
  background-color: #92FAAD;
}
.submitBtn:hover {
  cursor: pointer;
  background-color: #40ED6E;
}
.closeBtn {
  margin-bottom: 2px;
  border-radius: 9px;
  background-color: #FF7B6A;
  display: inline-block;
}
.closeBtn:hover {
  cursor: pointer;
  background-color: #FF5A45;
}
.ansBox {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 5px auto;
  max-width: 400px;
  text-align: right;
}
.upVoteBtn {
  margin-left: 5px;
  color: black;
}
.upVoteBtn:hover {
  cursor: pointer;
}

/* Media Queries!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
@media (max-width: 500px) {
  .logo {
    display: none;
  }
  .mobileLogo {
    display: inline-block;
  }
  .header {
    padding: 0 5px 0 5px;
    width: 96%;
    justify-content: center;
  }
}

@media (max-width: 430px) {
  .ansBox {
    text-align: center;
    display: block;
  }
  .ansBox > p {
    margin: 0;
    line-height: 22px;
  }
  .ansBox > p:nth-of-type(3) {
    border-bottom: 1px dashed #FFFFFF;
  }
}

